--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projectphase1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo1"
@@ -9,28 +12,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MenuProfile"
+        <activity android:name=".voicehelp"></activity>
+        <activity
+            android:name=".MenuProfile"
             android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity android:name=".RegistrationScreen"
+        <activity
+            android:name=".RegistrationScreen"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".HomePageTabScreen"
-            android:label="E-Workers"
-            />
-
-        <activity android:name=".SignInScreen"
+            android:label="E-Workers" />
+        <activity
+            android:name=".SignInScreen"
             android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity android:name=".SignUpScreen"
+        <activity
+            android:name=".SignUpScreen"
             android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity android:name=".MainActivity"
-           android:theme="@style/AppTheme.NoActionBar">
-                        <intent-filter>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
