--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".voicehelp"></activity>
+        <activity android:name=".Translator"></activity>
+        <activity android:name=".voicehelp" />
         <activity
-            android:name=".MenuProfile"
+            android:name=".MenuFeedback"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".RegistrationScreen"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".HomePageTabScreen"
-            android:screenOrientation="portrait"
-            android:label="E-Workers" />
+            android:label="E-Workers"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SignInScreen"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -39,8 +40,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".AlarmReceiver"/>
-
+        <receiver android:name=".AlarmReceiver" />
     </application>
 
 </manifest>
